<resources>
    <string name="app_name">addvwinsup Roomdata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add USer</string>
    <string name="view_user">View User</string>
    <string name="delete_user">Delete User</string>
    <string name="update_user">Update User</string>
    <string name="adduser">AddUser</string>
    <string name="user_id">User id</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="save">SAVE</string>
    <string name="deleted_user">deleted user</string>
    <string name="enter_the_user_id">Enter the user id</string>
    <string name="delete">DELETE</string>
    <string name="updateuser">UpdateUser</string>
    <string name="userid">userId</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="update">Update</string>
    <string name="delete_the_user">Delete the user</string>
    <string name="delete_userdata">Delete userdata</string>
    <string name="user_delete">User delete</string>
</resources>