<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:text="@string/updateuser"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/idupdate"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="160dp"
        android:hint="@string/userid" />

    <EditText
        android:id="@+id/nameupdate"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="260dp"
        android:hint="@string/enter_the_name"/>

    <EditText
        android:id="@+id/emailupdate"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="360dp"
        android:hint="@string/enter_the_email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:id="@+id/btnupdate"
        android:layout_marginTop="500dp"
        android:text="@string/update"
        android:textSize="30dp"/>



</FrameLayout>