<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdduserFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv"
        android:layout_width="180dp"
        android:layout_height="156dp"
        android:layout_marginLeft="150dp"
        android:paddingTop="80dp"
        android:text="@string/adduser"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:hint="@string/user_id"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp"
        android:hint="@string/name"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="400dp"
        android:hint="@string/email"
        android:textSize="20dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="550dp"
        android:text="@string/save"
        android:textSize="30dp" />

</FrameLayout>